# ddd-run

./: .gitignore  Cargo.toml  README.md
.claude/skills/install/: SKILL.md
src/: main.rs
src/commands/: init.rs  status.rs
src/templates/root/: CLAUDE.md  DOMAIN.md  README-DDD-HARNESS.md
src/templates/skills/: ddd-model.md  ddd-spec.md  ddd-storm.md
